--- a/css/main.css
+++ b/css/main.css
@@ -81,137 +81,154 @@ section {
   color: var(--focus-color);
 }
 
+.navigation-item {
+  display: none;
+}
+
+.menu-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.menu {
+  width: 40px;
+  height: 40px;
+  fill: #212121;
+}
+
+/*
 .header {
-  border-bottom: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
-
 .header .container {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
 .logo-light-theme {
-  top: 24px;
-  color: var(--main-text-color);
-  margin-right: 93px;
+    top: 24px;
+    color:var(--main-text-color);
+    margin-right: 93px;
 }
-
 .navigation {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
 .list {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
 .header-bg {
-  background: var(--standart-color);
+    background: var(--standart-color);
 }
-
 .header-link {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--main-text-color);
-  padding-top: 30px;
-  padding-bottom: 30px;
-  align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color:var(--main-text-color);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    align-items: center;
 
-.navigation-item:not(:last-child) {
-  margin-right: 50px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.navigation-item {
+    &:not(:last-child) {
+        margin-right: 50px;
+    }
+}
 .secondary {
-  margin-left: 331px;
+    margin-left: 331px;
 }
-
-.navigation-item-secondary:not(:last-child) {
-  margin-right: 50px;
+.navigation-item-secondary {
+    &:not(:last-child) {
+        margin-right: 50px;
+    }
 }
-
 .in-touch {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
+    display: flex;
+    margin-left: auto;
+    align-items: center;
 }
-
 .contact-link {
-  display: flex;
-  color: var(--secondary-text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    display: flex;
+    color: var(--secondary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.contact-link:hover, .contact-link:focus {
-  color: var(--focus-color);
-}
+    &:hover,
+    &:focus {
+        color:var(--focus-color );
+    }
 
-.contact-link:hover .icon-envelope,
-.contact-link:focus .icon-envelope {
-  fill: var(--focus-color);
-}
+    &:hover .icon-envelope,
+    &:focus .icon-envelope {
+        fill:  var(--focus-color);
+    }
 
-.contact-link:hover .icon-smartphone,
-.contact-link:focus .icon-smartphone {
-  fill: var(--focus-color);
+    &:hover .icon-smartphone,
+    &:focus .icon-smartphone {
+        fill:  var(--focus-color);
+    }
 }
+.im-here {
+    &:hover,
+    &:focus {
+        color: var(--focus-color );
+    }
 
-.im-here:hover, .im-here:focus {
-  color: var(--focus-color);
+    &:active {
+        color: var(--focus-color );
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
-
-.im-here:active {
-  color: var(--focus-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .current {
-  position: relative;
-  color: var(--focus-color);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    position: relative;
+    color: var(--focus-color );
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.current::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--focus-color);
-  position: absolute;
-  left: 0;
-  bottom: 0;
+    &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--focus-color);
+    
+        position:absolute;
+        left: 0;
+        bottom: 0;
+    }
 }
 
 .icon-envelope {
-  margin-right: 10px;
-  align-items: center;
-  fill: var(--secondary-text-color);
-  transition-property: fill;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
 
-.icon-envelope:hover, .icon-envelope:focus {
-  fill: var(--focus-color);
-}
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus {
+        fill: var(--focus-color);
+    }
+}
 .icon-smartphone {
-  margin-right: 10px;
-  align-items: center;
-  fill: var(--secondary-text-color);
-  transition-property: fill;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    margin-right: 10px;
+    align-items: center;
+    fill:var(--secondary-text-color);
 
-.icon-smartphone:hover, .icon-smartphone:focus {
-  fill: var(--focus-color);
-}
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus {
+        fill: var(--focus-color);
+    }
+}
+*/
 .hero-bg {
   background: var(--footer-bg-color);
   padding-bottom: 200px;
