--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -8,10 +8,10 @@
         justify-content: space-between;
     }
 }
-
 @media screen and (min-width: 480px) {
     .container {
         width: 480px;
+        justify-content: space-between;
         margin: 0 auto;
     }
 }
