--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,19 +2,82 @@
     padding-top: 16px;
     padding-bottom: 16px;
 }
-.navigation {
-    display: none;
-}
-.in-touch {
-    display: none;
-}
+
 .logo-light-theme {
-    color:#212121;
+    color:--main-text-color;
 }
-.menu-btn {
-    border: none;
-    background-color: transparent;
+
+@media screen and (max-width: 767px) {
+    .navigation {
+        display: none;
+    }
+    .in-touch {
+        display: none;
+    }
+    .menu-btn,
+    .mobile-menu__close-btn {
+        border: none;
+        background-color: transparent;
+        padding: 0;
+    }
+    .mobile-menu__close-btn {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+    }
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        max-width: 480px;
+        height: 100vw;
+        padding: 48px 40px;
+
+        transform: translateY(-100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .is-open {
+        transform: translateY(0);
+    }
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color:rgba(255, 255, 255, 1);
+    
+        opacity: 1;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    }
+    .mobile-menu__item {
+        font-family: --main-font;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+    
+        color:--main-text-color;
+    }
+    
 }
+.mobile-menu__link {
+    & :hover,
+    & :focus {
+        color: --focus-color;
+    }
+}
+@media screen and (min-width: 768px) {
+    .menu-btn {
+        display: none;
+    }
+    .mobile-menu {
+        display: none;
+    }
+}
+
 /*.header {
     border-bottom: 1px solid #ECECEC;
 }
