--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ section {
 }
 
 .logo-light-theme {
-  color: --main-text-color;
+  color: var(--main-text-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -139,6 +139,7 @@ section {
   }
   .mobile-menu {
     position: fixed;
+    align-items: flex-start;
     top: 0;
     left: 0;
     width: 100vw;
@@ -161,19 +162,83 @@ section {
     opacity: 1;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  .mobile-menu__list:not(:last-child) {
+    margin-bottom: 32px;
+  }
   .mobile-menu__item {
-    font-family: --main-font;
+    font-family: var(--main-font);
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    color: --main-text-color;
+    color: var(--main-text-color);
   }
 }
 
-.mobile-menu__link :hover,
-.mobile-menu__link :focus {
-  color: --focus-color;
+.mobile-menu__link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus, .mobile-menu__link:active {
+  color: var(--focus-color);
+}
+
+.mobile-menu_list-contacts {
+  margin-top: 302px;
+  margin-bottom: 64px;
+}
+
+.mobile-menu_list-contacts .mobile-menu__item-contacts-phone {
+  margin-bottom: 32px;
+}
+
+.mobile-menu_list-contacts .mobile-menu__link-contacts-phone {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  margin-bottom: 32px;
+  color: var(--focus-color);
+}
+
+.mobile-menu_list-contacts .mobile-menu__link-contacts-mail {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.mobile-menu__social-list {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.mobile-menu__social-list:not(:last-child)::after {
+  content: "";
+  width: 22px;
+  height: 0px;
+  margin: 0 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+}
+
+.mobile-menu__social-list .mobile-menu__social-link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  /* identical to box height, or 122% */
+  letter-spacing: 0.02em;
+  color: var(--focus-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -183,9 +248,53 @@ section {
   .mobile-menu {
     display: none;
   }
-}
-
-/*.header {
+  .navigation {
+    display: flex;
+    align-items: center;
+    margin-left: 88px;
+  }
+  .list {
+    display: flex;
+    align-items: center;
+  }
+  .im-here {
+    margin-right: 50px;
+  }
+  .im-here:hover, .im-here:focus {
+    color: var(--focus-color);
+  }
+  .im-here:active {
+    color: var(--focus-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header-link {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .in-touch {
+    display: block;
+    align-items: center;
+    justify-content: center;
+  }
+  .contact-link {
+    display: block;
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    /* identical to box height */
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /*.header {
     border-bottom: 1px solid #ECECEC;
 }
 .header .container {
@@ -314,7 +423,36 @@ section {
     &:focus {
         fill: var(--focus-color);
     }
-} */
+*/
+  }
+  .contact-link:hover, .contact-link:focus {
+    color: var(--focus-color);
+  }
+  .contact-link:last-child {
+    padding-top: 10px;
+  }
+  .contact-link .icon-envelope {
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-link .icon-envelope:hover, .contact-link .icon-envelope:focus {
+    fill: var(--focus-color);
+  }
+  .contact-link .icon-smartphone {
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-link .icon-smartphone:hover, .contact-link .icon-smartphone:focus {
+    fill: var(--focus-color);
+  }
+}
+
 .hero-bg {
   background: var(--footer-bg-color);
   padding-bottom: 200px;
