--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 }
 
 .logo-light-theme {
-    color:--main-text-color;
+    color: var(--main-text-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -27,6 +27,7 @@
     }
     .mobile-menu {
         position: fixed;
+        align-items: flex-start;
         top: 0;
         left: 0;
         width: 100vw;
@@ -52,21 +53,88 @@
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     }
+    .mobile-menu__list:not(:last-child) {
+        margin-bottom: 32px;
+    }
     .mobile-menu__item {
-        font-family: --main-font;
+        font-family: var(--main-font);
         font-weight: 500;
         font-size: 40px;
         line-height: 1.17;
         letter-spacing: 0.02em;
     
-        color:--main-text-color;
+        color: var(--main-text-color);
     }
     
 }
 .mobile-menu__link {
-    & :hover,
-    & :focus {
-        color: --focus-color;
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+    
+        color: var(--main-text-color);
+
+        &:hover,
+        &:focus,
+        &:active {
+            color: var(--focus-color);
+        }
+
+}
+.mobile-menu_list-contacts {
+    margin-top: 302px;
+    margin-bottom: 64px;
+
+    & .mobile-menu__item-contacts-phone {
+        margin-bottom: 32px;
+    }
+    & .mobile-menu__link-contacts-phone {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+        margin-bottom: 32px;
+    
+        color: var(--focus-color);
+    
+    }
+    & .mobile-menu__link-contacts-mail {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 1.16;
+        letter-spacing: 0.02em;
+    
+        color: var(--secondary-text-color);
+    }
+}
+
+.mobile-menu__social-list {
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+
+    &:not(:last-child)::after {
+        content: "";
+        width: 22px;
+        height: 0px;
+        margin: 0 10px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        transform: rotate(90deg);
+    }
+    .mobile-menu__social-link {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
+        /* identical to box height, or 122% */
+
+        letter-spacing: 0.02em;
+
+        color: var(--focus-color);
     }
 }
 @media screen and (min-width: 768px) {
@@ -76,6 +144,95 @@
     .mobile-menu {
         display: none;
     }
+    .navigation {
+            display: flex;
+            align-items: center;
+            margin-left: 88px;
+    }
+    
+    .list {
+        display: flex;
+        align-items: center;
+    }
+
+    .im-here {
+        margin-right: 50px;
+        &:hover,
+        &:focus {
+            color: var(--focus-color );
+        }
+    
+        &:active {
+            color: var(--focus-color );
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
+    .header-link {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color:var(--main-text-color);
+        padding-top: 30px;
+        padding-bottom: 30px;
+        align-items: center;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+    .in-touch {
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact-link {
+        display: block;
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.16;
+        /* identical to box height */
+
+        letter-spacing: 0.02em;
+
+        
+        color: var(--secondary-text-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            color:var(--focus-color );
+        }
+
+        &:last-child {
+            padding-top: 10px;
+        }
+        .icon-envelope {
+            margin-right: 10px;
+            align-items: center;
+            fill: var(--secondary-text-color);
+        
+            transition-property: fill;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+            &:hover,
+            &:focus {
+                fill: var(--focus-color);
+            }
+        }
+        .icon-smartphone {
+            margin-right: 10px;
+            align-items: center;
+            fill:var(--secondary-text-color);
+        
+            transition-property: fill;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+            &:hover,
+            &:focus {
+                fill: var(--focus-color);
+            }
 }
 
 /*.header {
@@ -207,4 +364,4 @@
     &:focus {
         fill: var(--focus-color);
     }
-} */
+*/} }
