--- a/css/main.css
+++ b/css/main.css
@@ -279,176 +279,162 @@ section {
     align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  .header-link:hover, .header-link:focus {
+    color: var(--focus-color);
+  }
   .in-touch {
     display: block;
     align-items: center;
     justify-content: center;
   }
   .contact-link {
-    display: block;
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.16;
-    /* identical to box height */
-    letter-spacing: 0.02em;
+    display: flex;
     color: var(--secondary-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /*.header {
+  }
+  .contact-link:hover, .contact-link:focus {
+    color: var(--focus-color);
+  }
+  .contact-link:hover .icon-envelope,
+  .contact-link:focus .icon-envelope {
+    fill: var(--focus-color);
+  }
+  .contact-link:hover .icon-smartphone,
+  .contact-link:focus .icon-smartphone {
+    fill: var(--focus-color);
+  }
+  .contact-link:last-child {
+    padding-top: 10px;
+  }
+  .icon-envelope {
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .icon-envelope:hover, .icon-envelope:focus {
+    fill: var(--focus-color);
+  }
+  .icon-smartphone {
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .icon-smartphone:hover, .icon-smartphone:focus {
+    fill: var(--focus-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  header {
     border-bottom: 1px solid #ECECEC;
-}
-.header .container {
+  }
+  .header .container {
     display: flex;
     align-items: center;
-}
-.logo-light-theme {
+  }
+  .logo-light-theme {
     top: 24px;
-    color:var(--main-text-color);
+    color: var(--main-text-color);
     margin-right: 93px;
-}
-.navigation {
+  }
+  .navigation {
     display: flex;
     align-items: center;
-}
-.list {
+  }
+  .list {
     display: flex;
     align-items: center;
-}
-.header-bg {
+  }
+  .header-bg {
     background: var(--standart-color);
-}
-.header-link {
+  }
+  .header-link {
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color:var(--main-text-color);
+    color: var(--main-text-color);
     padding-top: 30px;
     padding-bottom: 30px;
     align-items: center;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation-item {
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
-}
-.secondary {
+  }
+  .navigation-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .secondary {
     margin-left: 331px;
-}
-.navigation-item-secondary {
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
-}
-.in-touch {
+  }
+  .navigation-item-secondary:not(:last-child) {
+    margin-right: 50px;
+  }
+  .in-touch {
     display: flex;
     margin-left: auto;
     align-items: center;
-}
-.contact-link {
+  }
+  .contact-link {
     display: flex;
     color: var(--secondary-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        color:var(--focus-color );
-    }
-
-    &:hover .icon-envelope,
-    &:focus .icon-envelope {
-        fill:  var(--focus-color);
-    }
-
-    &:hover .icon-smartphone,
-    &:focus .icon-smartphone {
-        fill:  var(--focus-color);
-    }
-}
-.im-here {
-    &:hover,
-    &:focus {
-        color: var(--focus-color );
-    }
-
-    &:active {
-        color: var(--focus-color );
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-}
-.current {
-    position: relative;
-    color: var(--focus-color );
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: var(--focus-color);
-    
-        position:absolute;
-        left: 0;
-        bottom: 0;
-    }
-}
-
-.icon-envelope {
-    margin-right: 10px;
-    align-items: center;
-    fill: var(--secondary-text-color);
-
-    transition-property: fill;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--focus-color);
-    }
-}
-.icon-smartphone {
-    margin-right: 10px;
-    align-items: center;
-    fill:var(--secondary-text-color);
-
-    transition-property: fill;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--focus-color);
-    }
-*/
   }
   .contact-link:hover, .contact-link:focus {
     color: var(--focus-color);
   }
-  .contact-link:last-child {
-    padding-top: 10px;
-  }
-  .contact-link .icon-envelope {
-    margin-right: 10px;
-    align-items: center;
-    fill: var(--secondary-text-color);
-    transition-property: fill;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact-link .icon-envelope:hover, .contact-link .icon-envelope:focus {
+  .contact-link:hover .icon-envelope,
+  .contact-link:focus .icon-envelope {
     fill: var(--focus-color);
   }
-  .contact-link .icon-smartphone {
+  .contact-link:hover .icon-smartphone,
+  .contact-link:focus .icon-smartphone {
+    fill: var(--focus-color);
+  }
+  .im-here:hover, .im-here:focus {
+    color: var(--focus-color);
+  }
+  .im-here:active {
+    color: var(--focus-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .current {
+    position: relative;
+    color: var(--focus-color);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .current::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--focus-color);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+  .icon-envelope {
     margin-right: 10px;
     align-items: center;
     fill: var(--secondary-text-color);
     transition-property: fill;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .contact-link .icon-smartphone:hover, .contact-link .icon-smartphone:focus {
+  .icon-envelope:hover, .icon-envelope:focus {
+    fill: var(--focus-color);
+  }
+  .icon-smartphone {
+    margin-right: 10px;
+    align-items: center;
+    fill: var(--secondary-text-color);
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .icon-smartphone:hover, .icon-smartphone:focus {
     fill: var(--focus-color);
   }
 }
