--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -157,6 +157,7 @@
 
     .im-here {
         margin-right: 50px;
+
         &:hover,
         &:focus {
             color: var(--focus-color );
@@ -179,6 +180,11 @@
         align-items: center;
     
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+            &:hover,
+            &:focus {
+                color:var(--focus-color);
+            }
         }
 
     .in-touch {
@@ -186,28 +192,31 @@
         align-items: center;
         justify-content: center;
     }
-    .contact-link {
-        display: block;
-        font-family: var(--main-font);
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 1.16;
-        /* identical to box height */
-
-        letter-spacing: 0.02em;
-
+        .contact-link {
+            display: flex;
+            color: var(--secondary-text-color);
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
-        color: var(--secondary-text-color);
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-        &:hover,
-        &:focus {
-            color:var(--focus-color );
-        }
+            &:hover,
+            &:focus {
+                color:var(--focus-color);
+            }
+        
+            &:hover .icon-envelope,
+            &:focus .icon-envelope {
+                fill:  var(--focus-color);
+            }
+        
+            &:hover .icon-smartphone,
+            &:focus .icon-smartphone {
+                fill:  var(--focus-color);
+            }
+
 
         &:last-child {
             padding-top: 10px;
         }
+    }
         .icon-envelope {
             margin-right: 10px;
             align-items: center;
@@ -233,135 +242,138 @@
             &:focus {
                 fill: var(--focus-color);
             }
-}
-
-/*.header {
-    border-bottom: 1px solid #ECECEC;
-}
-.header .container {
-    display: flex;
-    align-items: center;
-}
-.logo-light-theme {
-    top: 24px;
-    color:var(--main-text-color);
-    margin-right: 93px;
-}
-.navigation {
-    display: flex;
-    align-items: center;
-}
-.list {
-    display: flex;
-    align-items: center;
-}
-.header-bg {
-    background: var(--standart-color);
-}
-.header-link {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color:var(--main-text-color);
-    padding-top: 30px;
-    padding-bottom: 30px;
-    align-items: center;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation-item {
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
-}
-.secondary {
-    margin-left: 331px;
-}
-.navigation-item-secondary {
-    &:not(:last-child) {
-        margin-right: 50px;
-    }
-}
-.in-touch {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-}
-.contact-link {
-    display: flex;
-    color: var(--secondary-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        color:var(--focus-color );
+        }
     }
 
-    &:hover .icon-envelope,
-    &:focus .icon-envelope {
-        fill:  var(--focus-color);
+@media screen and (min-width: 1200px) {
+    header {
+        border-bottom: 1px solid #ECECEC;
     }
-
-    &:hover .icon-smartphone,
-    &:focus .icon-smartphone {
-        fill:  var(--focus-color);
+    .header .container {
+        display: flex;
+        align-items: center;
     }
-}
-.im-here {
-    &:hover,
-    &:focus {
-        color: var(--focus-color );
+    .logo-light-theme {
+        top: 24px;
+        color:var(--main-text-color);
+        margin-right: 93px;
     }
-
-    &:active {
-        color: var(--focus-color );
+    .navigation {
+        display: flex;
+        align-items: center;
+    }
+    .list {
+        display: flex;
+        align-items: center;
+    }
+    .header-bg {
+        background: var(--standart-color);
+    }
+    .header-link {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color:var(--main-text-color);
+        padding-top: 30px;
+        padding-bottom: 30px;
+        align-items: center;
+    
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-}
-.current {
-    position: relative;
-    color: var(--focus-color );
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: var(--focus-color);
+    .navigation-item {
+        &:not(:last-child) {
+            margin-right: 50px;
+        }
+    }
+    .secondary {
+        margin-left: 331px;
+    }
+    .navigation-item-secondary {
+        &:not(:last-child) {
+            margin-right: 50px;
+        }
+    }
+    .in-touch {
+        display: flex;
+        margin-left: auto;
+        align-items: center;
+    }
+    .contact-link {
+        display: flex;
+        color: var(--secondary-text-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-        position:absolute;
-        left: 0;
-        bottom: 0;
+        &:hover,
+        &:focus {
+            color:var(--focus-color );
+        }
+    
+        &:hover .icon-envelope,
+        &:focus .icon-envelope {
+            fill:  var(--focus-color);
+        }
+    
+        &:hover .icon-smartphone,
+        &:focus .icon-smartphone {
+            fill:  var(--focus-color);
+        }
+    }
+    .im-here {
+        &:hover,
+        &:focus {
+            color: var(--focus-color );
+        }
+    
+        &:active {
+            color: var(--focus-color );
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    }
+    .current {
+        position: relative;
+        color: var(--focus-color );
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &::after {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background-color: var(--focus-color);
+        
+            position:absolute;
+            left: 0;
+            bottom: 0;
+        }
+    }
+    
+    .icon-envelope {
+        margin-right: 10px;
+        align-items: center;
+        fill: var(--secondary-text-color);
+    
+        transition-property: fill;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            fill: var(--focus-color);
+        }
+    }
+    .icon-smartphone {
+        margin-right: 10px;
+        align-items: center;
+        fill:var(--secondary-text-color);
+    
+        transition-property: fill;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            fill: var(--focus-color);
+        }
     }
 }
-
-.icon-envelope {
-    margin-right: 10px;
-    align-items: center;
-    fill: var(--secondary-text-color);
-
-    transition-property: fill;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--focus-color);
-    }
-}
-.icon-smartphone {
-    margin-right: 10px;
-    align-items: center;
-    fill:var(--secondary-text-color);
-
-    transition-property: fill;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--focus-color);
-    }
-*/} }
