--- a/sass/components/_main-button.scss
+++ b/sass/components/_main-button.scss
@@ -1,4 +1,5 @@
-.main-button {
+@media screen and (max-width:767px) {
+    .main-button {
     font-family: var(--main-font);
     font-weight: bold;
     font-size: 16px;
@@ -23,3 +24,30 @@
     background-color: var(--focus-color);
     }
 }
+}
+
+/*.main-button {
+    font-family: var(--main-font);
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    display: block;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    color: var(--standart-color);
+    background: var(--focus-color );
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 32px;
+    margin-left: auto;
+    margin-right: auto;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+    background-color: var(--focus-color);
+    }
+}*/
