--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,27 +1,59 @@
-.hero-bg {
-    background: var(--footer-bg-color);
-    padding-bottom: 200px;
-    padding-top: 200px;
-    background-image: linear-gradient( to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images.img/hero.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.hero-title {
-    margin: 0 auto;
-    max-width: 696px;
-    font-family: var(--main-font);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--standart-color);
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
+@media screen and (max-width:1199px) {
+    .hero-bg {
+        background: var(--footer-bg-color);
+        padding-bottom: 118px;
+        padding-top: 118px;
+        background-image: linear-gradient( to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images.img/hero.jpeg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        max-width: 480px;
+        margin-left: auto;
+        margin-right: auto;
     }
+    .hero-title {
+        margin: 0 auto;
+        max-width: 360px;
+        font-family: var(--main-font);
+        font-weight: 900;
+        font-size: 26px;
+        line-height: 1.62;
+        text-align: center;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: var(--standart-color);
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero-bg {
+        background: var(--footer-bg-color);
+        padding-bottom: 200px;
+        padding-top: 200px;
+        background-image: linear-gradient( to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images.img/hero.jpeg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        max-width: 1600px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .hero-title {
+        margin: 0 auto;
+        max-width: 696px;
+        font-family: var(--main-font);
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        text-align: center;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: var(--standart-color);
+        display: flex;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+}
