--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,12 @@ section {
   color: var(--main-text-color);
 }
 
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
 @media screen and (max-width: 767px) {
   .navigation {
     display: none;
