--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width:1199px) {
+@media screen and (min-width:480px) {
     .hero-bg {
         background: var(--footer-bg-color);
         padding-bottom: 118px;
@@ -25,6 +25,12 @@
         display: flex;
         align-items: center;
         margin-bottom: 30px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .hero-bg {
+        max-width: 768px;
     }
 }
 
