--- a/css/main.css
+++ b/css/main.css
@@ -561,217 +561,491 @@ section {
   }
 }
 
-.cont {
-  padding-top: 0px;
+@media screen and (max-width: 1199px) {
+  .cont {
+    display: none;
+  }
 }
 
-.about-container {
-  display: flex;
-  align-items: center;
-  margin-top: -30px;
-  margin-left: -30px;
+@media screen and (min-width: 1200px) {
+  .cont {
+    padding-top: 0px;
+  }
+  .about-container {
+    display: flex;
+    align-items: center;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  .about-link:not(:last-child) {
+    margin-right: 30px;
+  }
+  .about1 {
+    width: 100%;
+    height: 100%;
+  }
+  .about2 {
+    width: 100%;
+    height: 100%;
+  }
+  .about3 {
+    width: 100%;
+    height: 100%;
+  }
+  .work-wrapper {
+    position: relative;
+  }
+  .work-variations {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    font-family: var(--main-font);
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1,14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    color: var(--standart-color);
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 }
 
-.about-link:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 768px) {
+  .team-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: -30px;
+  }
+  .team-container__set {
+    margin-left: 30px;
+    flex-basis: calc((100% - 120px)/4);
+  }
+  .team-container__set:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .our-team-bg {
+    background-color: var(--team-bg-color);
+  }
+  .team-mate {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    margin-bottom: 10px;
+  }
+  .team-description {
+    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .job-position {
+    font-family: var(--main-font);
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+  }
+  .card {
+    width: 450px;
+    background: var(--standart-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .ihor {
+    width: 450px;
+    height: 460px;
+    background: url(4853.jpg);
+    border-radius: 0px;
+  }
+  .olha {
+    width: 450px;
+    height: 460px;
+    background: url(5844.jpg);
+    border-radius: 0px;
+  }
+  .nikolaj {
+    width: 450px;
+    height: 460px;
+    background: url(16166.jpg);
+    border-radius: 0px;
+  }
+  .michele {
+    width: 450px;
+    height: 460px;
+    background: url(2968.jpg);
+    border-radius: 0px;
+  }
 }
 
-.about1 {
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 1199px) {
+  .team-container {
+    display: flexbox;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+  .team-container__set {
+    margin-left: 30px;
+    flex-basis: calc((100% - 60px)/2);
+    width: 354px;
+    justify-items: center;
+    margin-bottom: 30px;
+  }
+  .our-team-bg {
+    background-color: var(--team-bg-color);
+  }
+  .team-mate {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    margin-bottom: 10px;
+  }
+  .team-description {
+    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .job-position {
+    font-family: var(--main-font);
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+  }
+  .card {
+    height: 536px;
+    background: var(--standart-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .ihor {
+    width: 354px;
+    height: 374px;
+    background: url(4853.jpg);
+    border-radius: 0px;
+  }
+  .olha {
+    width: 354px;
+    height: 374px;
+    background: url(5844.jpg);
+    border-radius: 0px;
+  }
+  .nikolaj {
+    width: 354px;
+    height: 374px;
+    background: url(16166.jpg);
+    border-radius: 0px;
+  }
+  .michele {
+    width: 354px;
+    height: 374px;
+    background: url(2968.jpg);
+    border-radius: 0px;
+  }
 }
 
-.about2 {
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 1199px) and (min-width: 1200px) {
+  .team-container {
+    display: flex;
+    align-items: center;
+    margin-left: -30px;
+  }
+  .team-container__set {
+    margin-left: 30px;
+    flex-basis: calc((100% - 120px)/4);
+  }
+  .our-team-bg {
+    background-color: var(--team-bg-color);
+  }
+  .team-mate {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    margin-bottom: 10px;
+  }
+  .team-description {
+    padding-bottom: 30px;
+    padding-top: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .job-position {
+    font-family: var(--main-font);
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+  }
+  .card {
+    width: 270px;
+    background: var(--standart-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .ihor {
+    width: 270px;
+    height: 260px;
+    background: url(4853.jpg);
+    border-radius: 0px;
+  }
+  .olha {
+    width: 270px;
+    height: 260px;
+    background: url(5844.jpg);
+    border-radius: 0px;
+  }
+  .nikolaj {
+    width: 270px;
+    height: 260px;
+    background: url(16166.jpg);
+    border-radius: 0px;
+  }
+  .michele {
+    width: 270px;
+    height: 260px;
+    background: url(2968.jpg);
+    border-radius: 0px;
+  }
 }
 
-.about3 {
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 1199px) {
+  .social {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .social__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--standart-color);
+    transition-property: fill;
+    transition-property: background-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social__link:hover .social__icon,
+  .social__link:focus .social__icon {
+    fill: var(--standart-color);
+  }
+  .social__icon {
+    fill: #afb1b8;
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social__icon:hover, .social__icon:focus {
+    background-color: var(--focus-color);
+  }
 }
 
-.work-wrapper {
-  position: relative;
+@media screen and (min-width: 1200px) {
+  .social {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .social__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: var(--standart-color);
+    transition-property: fill;
+    transition-property: background-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social__link:hover .social__icon,
+  .social__link:focus .social__icon {
+    fill: var(--standart-color);
+  }
+  .social__icon {
+    fill: #afb1b8;
+    transition-property: fill;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .social__icon:hover, .social__icon:focus {
+    background-color: var(--focus-color);
+  }
 }
 
-.work-variations {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  font-family: var(--main-font);
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1,14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  color: var(--standart-color);
-  background-color: rgba(47, 48, 58, 0.8);
+@media screen and (max-width: 768px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-left: -30px;
+  }
+  .clients-main-link {
+    margin-left: 30px;
+    flex-basis: calc((100% - 60px)/2);
+    width: 210px;
+    justify-items: center;
+    margin-bottom: 30px;
+  }
+  .clients__title {
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    min-width: 314px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+  }
+  .clients-box {
+    width: 210px;
+    height: 92px;
+    border: 1px solid var(--clients-logo-color);
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-box:hover, .clients-box:focus {
+    border-color: var(--focus-color);
+  }
+  .clients-box:hover .clients-logo,
+  .clients-box:focus .clients-logo {
+    fill: var(--focus-color);
+  }
+  .clients-logo {
+    fill: var(--clients-logo-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-logo:hover, .clients-logo:focus {
+    fill: var(--focus-color);
+  }
 }
 
-.team-container {
-  display: flex;
-  align-items: center;
-  margin-left: -30px;
+@media screen and (min-width: 769px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-left: -30px;
+  }
+  .clients-main-link {
+    margin-left: 30px;
+    flex-basis: calc((100% - 90px)/3);
+    width: 226px;
+    justify-items: center;
+    margin-bottom: 30px;
+  }
+  .clients__title {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    min-width: 314px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+  }
+  .clients-box {
+    width: 226px;
+    height: 92px;
+    border: 1px solid var(--clients-logo-color);
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-box:hover, .clients-box:focus {
+    border-color: var(--focus-color);
+  }
+  .clients-box:hover .clients-logo,
+  .clients-box:focus .clients-logo {
+    fill: var(--focus-color);
+  }
+  .clients-logo {
+    fill: var(--clients-logo-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-logo:hover, .clients-logo:focus {
+    fill: var(--focus-color);
+  }
 }
 
-.team-container__set {
-  margin-left: 30px;
-  flex-basis: calc((100% - 120px)/4);
-}
-
-.our-team-bg {
-  background-color: var(--team-bg-color);
-}
-
-.team-mate {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-text-color);
-  margin-bottom: 10px;
-}
-
-.team-description {
-  padding-bottom: 30px;
-  padding-top: 30px;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.job-position {
-  font-family: var(--main-font);
-  font-size: 16px;
-  line-height: 1.18;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-}
-
-.card {
-  width: 270px;
-  background: var(--standart-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.ihor {
-  width: 270px;
-  height: 260px;
-  background: url(4853.jpg);
-  border-radius: 0px;
-}
-
-.olha {
-  width: 270px;
-  height: 260px;
-  background: url(5844.jpg);
-  border-radius: 0px;
-}
-
-.nikolaj {
-  width: 270px;
-  height: 260px;
-  background: url(16166.jpg);
-  border-radius: 0px;
-}
-
-.michele {
-  width: 270px;
-  height: 260px;
-  background: url(2968.jpg);
-  border-radius: 0px;
-}
-
-.social {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.social__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--standart-color);
-  transition-property: fill;
-  transition-property: background-color;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social__link:hover .social__icon,
-.social__link:focus .social__icon {
-  fill: var(--standart-color);
-}
-
-.social__icon {
-  fill: #afb1b8;
-  transition-property: fill;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social__icon:hover, .social__icon:focus {
-  background-color: var(--focus-color);
-}
-
-.clients-list {
-  display: flex;
-}
-
-.clients-main-link {
-  margin-right: 30px;
-}
-
-.clients__title {
-  font-family: var(--main-font);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--main-text-color);
-  min-width: 700px;
-  margin-top: 0px;
-  margin-bottom: 50px;
-}
-
-.clients-box {
-  width: 170px;
-  height: 90px;
-  border: 1px solid var(--clients-logo-color);
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-box:hover, .clients-box:focus {
-  border-color: var(--focus-color);
-}
-
-.clients-box:hover .clients-logo,
-.clients-box:focus .clients-logo {
-  fill: var(--focus-color);
-}
-
-.clients-logo {
-  fill: var(--clients-logo-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-logo:hover, .clients-logo:focus {
-  fill: var(--focus-color);
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+  }
+  .clients-main-link {
+    margin-right: 30px;
+  }
+  .clients__title {
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    min-width: 700px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+  }
+  .clients-box {
+    width: 170px;
+    height: 90px;
+    border: 1px solid var(--clients-logo-color);
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-box:hover, .clients-box:focus {
+    border-color: var(--focus-color);
+  }
+  .clients-box:hover .clients-logo,
+  .clients-box:focus .clients-logo {
+    fill: var(--focus-color);
+  }
+  .clients-logo {
+    fill: var(--clients-logo-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .clients-logo:hover, .clients-logo:focus {
+    fill: var(--focus-color);
+  }
 }
 
 .main-set {
@@ -961,6 +1235,8 @@ section {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-top: -30px;
     margin-left: -30px;
   }
