--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,49 +1,56 @@
-.cont {
-    padding-top: 0px;
-}
-.about-container {
-    display: flex;
-    align-items: center;
-    margin-top: -30px;
-    margin-left: -30px;
-}
-.about-link {
-    &:not(:last-child) {
-        margin-right: 30px;
+@media screen and (max-width:1199px) {
+    .cont {
+        display: none;
     }
 }
-.about1 {
-    width: 100%;
-    height: 100%;
-}
-.about2 {
-    width: 100%;
-    height: 100%;
+@media screen and (min-width:1200px) {
+    .cont {
+        padding-top: 0px;
     }
-.about3 {
-    width: 100%;
-    height: 100%;
+    .about-container {
+        display: flex;
+        align-items: center;
+        margin-top: -30px;
+        margin-left: -30px;
     }
-.work-wrapper {
-    position: relative;
-}
-.work-variations {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    .about-link {
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+    .about1 {
+        width: 100%;
+        height: 100%;
+    }
+    .about2 {
+        width: 100%;
+        height: 100%;
+        }
+    .about3 {
+        width: 100%;
+        height: 100%;
+        }
+    .work-wrapper {
+        position: relative;
+    }
+    .work-variations {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        
     
-
-    width: 100%;
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1,14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    
-    color: var(--standart-color);
-    background-color: rgba(47, 48, 58, 0.8);
- }   
+        width: 100%;
+        font-family: var(--main-font);
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1,14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        padding-top: 27px;
+        padding-bottom: 27px;
+        
+        color: var(--standart-color);
+        background-color: rgba(47, 48, 58, 0.8);
+     }   
+}
