--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,46 +1,166 @@
-.clients-list {
-    display: flex;
-}
-.clients-main-link {
-    margin-right: 30px;
-}
-.clients__title {
-    font-family: var(--main-font);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-text-color);
-    min-width: 700px;
-    margin-top: 0px;
-    margin-bottom: 50px;
-}
-.clients-box {
-    width: 170px;
-    height: 90px;
-    border: 1px solid var(--clients-logo-color);
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        border-color: var(--focus-color);
+@media screen and (max-width: 768px) {
+    .clients-list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-left: -30px;
     }
-    &:hover .clients-logo,
-    &:focus .clients-logo {
-        fill: var(--focus-color);
+    .clients-main-link {
+        margin-left: 30px;
+        flex-basis: calc((100% - 60px)/2);
+        width: 210px;
+        justify-items: center;
+        margin-bottom: 30px;
+    }
+    .clients__title {
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        font-family: var(--main-font);
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 1.17;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        min-width: 314px;
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
+    .clients-box {
+        width: 210px;
+        height: 92px;
+        border: 1px solid var(--clients-logo-color);
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            border-color: var(--focus-color);
+        }
+        &:hover .clients-logo,
+        &:focus .clients-logo {
+            fill: var(--focus-color);
+        }
+    }
+    .clients-logo {
+        fill: var(--clients-logo-color);
+        
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            fill: var(--focus-color);
+        }
     }
 }
-.clients-logo {
-    fill: var(--clients-logo-color);
-    
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        fill: var(--focus-color);
+
+@media screen and (min-width: 769px) {
+    .clients-list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-left: -30px;
+    }
+    .clients-main-link {
+        margin-left: 30px;
+        flex-basis: calc((100% - 90px)/3);
+        width: 226px;
+        justify-items: center;
+        margin-bottom: 30px;
+    }
+    .clients__title {
+        font-family: var(--main-font);
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 1.17;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        min-width: 314px;
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
+    .clients-box {
+        width: 226px;
+        height: 92px;
+        border: 1px solid var(--clients-logo-color);
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            border-color: var(--focus-color);
+        }
+        &:hover .clients-logo,
+        &:focus .clients-logo {
+            fill: var(--focus-color);
+        }
+    }
+    .clients-logo {
+        fill: var(--clients-logo-color);
+        
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            fill: var(--focus-color);
+        }
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .clients-list {
+        display: flex;
+    }
+    .clients-main-link {
+        margin-right: 30px;
+    }
+    .clients__title {
+        font-family: var(--main-font);
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        min-width: 700px;
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
+    .clients-box {
+        width: 170px;
+        height: 90px;
+        border: 1px solid var(--clients-logo-color);
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            border-color: var(--focus-color);
+        }
+        &:hover .clients-logo,
+        &:focus .clients-logo {
+            fill: var(--focus-color);
+        }
+    }
+    .clients-logo {
+        fill: var(--clients-logo-color);
+        
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            fill: var(--focus-color);
+        }
     }
 }
