--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,66 +1,214 @@
-.team-container {
-    display: flex;
-    align-items: center;
-    margin-left: -30px;
+@media screen and (max-width: 768px) {
+    .team-container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: -30px;
+    }
+    .team-container__set {
+        margin-left: 30px;
+        flex-basis: calc((100% - 120px)/4);
+    }
+    .team-container__set:not(:last-child) {
+        margin-bottom: 30px;
+    }
+    .our-team-bg {
+        background-color: var(--team-bg-color)
+    }
+    .team-mate {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        margin-bottom: 10px;
+    }
+    .team-description {
+        padding-bottom: 30px;
+        padding-top: 30px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .job-position {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-color);
+    }
+    .card {
+        width: 450px;
+        background: var(--standart-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+    }
+    .ihor {
+        width: 450px;
+        height: 460px;
+        background: url(4853.jpg);
+        border-radius: 0px;
+    }
+    .olha {
+        width: 450px;
+        height: 460px;
+        background: url(5844.jpg);
+        border-radius: 0px;
+    }
+    .nikolaj {
+        width: 450px;
+        height: 460px;
+        background: url(16166.jpg);
+        border-radius: 0px;
+    }
+    .michele {
+        width: 450px;
+        height: 460px;
+        background: url(2968.jpg);
+        border-radius: 0px;
+    }
 }
-.team-container__set {
-    margin-left: 30px;
-    flex-basis: calc((100% - 120px)/4);
+
+@media screen and (max-width:1199px) {
+    .team-container {
+        display: flexbox;
+        flex-wrap: wrap;
+        margin-left: -30px;
+    }
+    .team-container__set {
+        margin-left: 30px;
+        flex-basis: calc((100% - 60px)/2);
+        width: 354px;
+        justify-items: center;
+        margin-bottom: 30px;
+    }
+    .our-team-bg {
+        background-color: var(--team-bg-color)
+    }
+    .team-mate {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        margin-bottom: 10px;
+    }
+    .team-description {
+        padding-bottom: 30px;
+        padding-top: 30px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .job-position {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-color);
+    }
+    .card {
+        height: 536px;
+        background: var(--standart-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+    }
+    .ihor {
+        width: 354px;
+        height: 374px;
+        background: url(4853.jpg);
+        border-radius: 0px;
+    }
+    .olha {
+        width: 354px;
+        height: 374px;
+        background: url(5844.jpg);
+        border-radius: 0px;
+    }
+    .nikolaj {
+        width: 354px;
+        height: 374px;
+        background: url(16166.jpg);
+        border-radius: 0px;
+    }
+    .michele {
+        width: 354px;
+        height: 374px;
+        background: url(2968.jpg);
+        border-radius: 0px;
 }
-.our-team-bg {
-    background-color: var(--team-bg-color)
-}
-.team-mate {
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-text-color);
-    margin-bottom: 10px;
-}
-.team-description {
-    padding-bottom: 30px;
-    padding-top: 30px;
-    padding-right: 15px;
-    padding-left: 15px;
-}
-.job-position {
-    font-family: var(--main-font);
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-}
-.card {
-    width: 270px;
-    background: var(--standart-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-.ihor {
-    width: 270px;
-    height: 260px;
-    background: url(4853.jpg);
-    border-radius: 0px;
-}
-.olha {
-    width: 270px;
-    height: 260px;
-    background: url(5844.jpg);
-    border-radius: 0px;
-}
-.nikolaj {
-    width: 270px;
-    height: 260px;
-    background: url(16166.jpg);
-    border-radius: 0px;
-}
-.michele {
-    width: 270px;
-    height: 260px;
-    background: url(2968.jpg);
-    border-radius: 0px;
-}
+
+@media screen and (min-width: 1200px) {
+    .team-container {
+        display: flex;
+        align-items: center;
+        margin-left: -30px;
+    }
+    .team-container__set {
+        margin-left: 30px;
+        flex-basis: calc((100% - 120px)/4);
+    }
+    .our-team-bg {
+        background-color: var(--team-bg-color)
+    }
+    .team-mate {
+        font-family: var(--main-font);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--main-text-color);
+        margin-bottom: 10px;
+    }
+    .team-description {
+        padding-bottom: 30px;
+        padding-top: 30px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .job-position {
+        font-family: var(--main-font);
+        font-size: 16px;
+        line-height: 1.18;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-color);
+    }
+    .card {
+        width: 270px;
+        background: var(--standart-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+    }
+    .ihor {
+        width: 270px;
+        height: 260px;
+        background: url(4853.jpg);
+        border-radius: 0px;
+    }
+    .olha {
+        width: 270px;
+        height: 260px;
+        background: url(5844.jpg);
+        border-radius: 0px;
+    }
+    .nikolaj {
+        width: 270px;
+        height: 260px;
+        background: url(16166.jpg);
+        border-radius: 0px;
+    }
+    .michele {
+        width: 270px;
+        height: 260px;
+        background: url(2968.jpg);
+        border-radius: 0px;
+    }
+} }
