--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .advantage {
         padding-top: 60px;
     }
@@ -8,17 +8,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: -30px;
-        margin-left: -30px;
+        /*margin-top: -30px;
+        margin-left: -30px;*/
     }
     .advantage-items {
-        margin-top: 30px;
+        margin-top: -30px;
+        margin-left: -30px;
+        /*margin-top: 30px;
         margin-left: 30px;
-        flex-basis: calc((100% - 120px)/4);
+        flex-basis: calc((100% - 120px)/4);*/
         width: 450px;
         justify-items: center;
     }
     .advantage-card {
+        margin-top: 30px;
+        margin-left: 30px;
+        flex-basis: calc((100% - 120px)/4);
         display: flex;
         align-items: center;
         justify-content: center;
