--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .clients-list {
         display: flex;
         flex-wrap: wrap;
@@ -58,16 +58,18 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .clients-list {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         margin-left: -30px;
+        margin-top: -30px;
     }
     .clients-main-link {
         margin-left: 30px;
+        margin-top: 30px;
         flex-basis: calc((100% - 90px)/3);
         width: 226px;
         justify-items: center;
