--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .footer-bg {
         padding-top: 60px;
         padding-bottom: 60px;
@@ -48,6 +48,7 @@
     .invitation-footer {
         display: block;
         padding-top: 0px;
+        margin-top: 60px;
     }
     .invitation {
         display: block;
@@ -81,6 +82,8 @@
     }
     .footer-set__footer-icons {
         fill: var(--standart-color);
+        margin-right: auto;
+        margin-left: auto;
     }
     .footer-icons-link:hover,
     .footer-icons-link:focus  {
@@ -153,7 +156,7 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .footer-bg {
         padding-top: 60px;
         padding-bottom: 60px;
@@ -230,13 +233,12 @@
     
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .footer-set__footer-icons-list {
-        &:not(:last-child) {
-            margin-right: 10px;
-        } 
+    
     }
     .footer-set__footer-icons {
         fill: var(--standart-color);
+        margin-right: auto;
+        margin-left: auto;
     }
     .footer-icons-link:hover,
     .footer-icons-link:focus  {
@@ -247,6 +249,9 @@
             background-color: var(--focus-color);
     }
     }
+    .footer-set__footer-icons-list {
+            margin-right: 10px;
+        } 
     .follow {
         /*margin-left: auto;*/
         padding-top: 60px;
@@ -264,7 +269,9 @@
     }
     .follow__wrapper {
         position: relative;
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center
     }
     .mail-mark {
         font-family: var(--main-font);
@@ -274,7 +281,7 @@
     .mail__follower {
         margin-right: 12px;
         margin-bottom: 20px;
-        width: 100%;
+        width: 450px;
         height: 50px;
         border-radius: 4px;
         border: 1px solid rgba(255,255,255,0.3);
@@ -305,9 +312,9 @@
     }
     .follow__icon {
         fill: var(--standart-color);
-        margin-left: 10px;
+        margin-right: 10px;
     }
-}
+
 
 @media screen and (win-width: 1200px) {
     .footer-bg {
@@ -363,9 +370,12 @@
         text-transform: uppercase;
         margin-bottom: 20px;
     }
+    .footer-set {
+        display: flex;
+        margin-right: 10px;
+    }
     .footer-set__footer-icons-color {
         display: flex;
-        justify-content: center;
         align-items: center;
         width: 44px;
         height: 44px;
@@ -374,14 +384,13 @@
     
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .footer-set__footer-icons-list {
-        &:not(:last-child) {
-            margin-right: 10px;
-        } 
-    }
+    
     .footer-set__footer-icons {
+        margin-right: auto;
+        margin-left: auto;
         fill: var(--standart-color);
     }
+    
     .footer-icons-link:hover,
     .footer-icons-link:focus  {
         background-color: var(--focus-color);
