--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .team-container {
         display: flex;
         flex-wrap: wrap;
@@ -6,9 +6,11 @@
         align-items: center;
         justify-content: center;
         margin-left: -30px;
+        margin-top: -30px;
     }
     .team-container__set {
         margin-left: 30px;
+        margin-top: 30px;
         flex-basis: calc((100% - 120px)/4);
     }
     .team-container__set:not(:last-child) {
@@ -73,7 +75,7 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .team-container {
         display: flexbox;
         flex-wrap: wrap;
