--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,33 +1,33 @@
 @media screen and (max-width:767px) {
     .advantage {
         padding-top: 60px;
-    }
     .advantage-set {
-        display: flex;
         flex-wrap:wrap;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /*margin-top: -30px;
+        width: 450px;
+       /* margin-top: -30px;
         margin-left: -30px;*/
     }
     .advantage-items {
         margin-top: -30px;
-        margin-left: -30px;
+        /*margin-left: -30px;*/
         /*margin-top: 30px;
         margin-left: 30px;
         flex-basis: calc((100% - 120px)/4);*/
-        width: 450px;
+        width: 100%;
         justify-items: center;
+        margin-bottom: 60px;
     }
     .advantage-card {
         margin-top: 30px;
-        margin-left: 30px;
         flex-basis: calc((100% - 120px)/4);
         display: flex;
         align-items: center;
         justify-content: center;
         justify-items: center;
+        width: 450px;
         height: 120px;
         background-color: #f5f4fa;
         border-radius: 4px;
@@ -35,7 +35,6 @@
     }
     .advantage-name {
         display: flex;
-        align-items: center;
         justify-content: center;
         font-family: var(--main-font);
         font-weight: bold;
@@ -48,8 +47,6 @@
     }
     .advantage-explanation {
         display: flex;
-        align-items: center;
-        justify-content: center;
         font-family: var(--main-font);
         font-size: 14px;
         line-height: 1.71;
@@ -58,7 +55,7 @@
     }
 }
 
-@media screen and (max-width:1199px) {
+@media screen and (min-width: 768px) {
     .advantage {
         padding-top: 60px;
     }
@@ -103,45 +100,45 @@
 
 @media screen and (min-width:1200px) {
     .advantage {
-    padding-top: 94px;
-}
-.advantage-set {
-    display: flex;
-    flex-wrap:nowrap;
-    margin-top: -30px;
-    margin-left: -30px;
-}
-.advantage-items {
-    margin-top: 30px;
-    margin-left: 30px;
-    flex-basis: calc((100% - 120px)/4);
-    width: 270px;
-    justify-items: center;
-}
-.advantage-card {
-    height: 120px;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.advantage-name {
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--main-text-color);
-    margin-bottom: 10px;
-}
-.advantage-explanation {
-    font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-}
-}
+        padding-top: 94px;
+    }
+    .advantage-set {
+        display: flex;
+        flex-wrap:nowrap;
+        margin-top: -30px;
+        margin-left: -30px;
+    }
+    .advantage-items {
+        margin-top: 30px;
+        margin-left: 30px;
+        flex-basis: calc((100% - 120px)/4);
+        width: 270px;
+        justify-items: center;
+    }
+    .advantage-card {
+        height: 120px;
+        background-color: #f5f4fa;
+        border-radius: 4px;
+        margin-bottom: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .advantage-name {
+        font-family: var(--main-font);
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--main-text-color);
+        margin-bottom: 10px;
+    }
+    .advantage-explanation {
+        font-family: var(--main-font);
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-color);
+    }
+}}
