--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -182,9 +182,12 @@
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--secondary-text-color);
+
+        margin-bottom: 16px;
     }
     .card {
         width: 270px;
+        height: 428px;
         background: var(--standart-color);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
