--- a/css/main.css
+++ b/css/main.css
@@ -1062,7 +1062,7 @@ section {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .main-set {
     display: flex;
     flex-wrap: wrap;
@@ -1226,7 +1226,7 @@ section {
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
   .main-set {
     display: flex;
     flex-wrap: nowrap;
@@ -1435,6 +1435,7 @@ section {
   .works-set {
     display: flex;
     flex-wrap: wrap;
+    /*align-items: center;*/
     align-items: flex-start;
     align-content: center;
     margin-top: -30px;
@@ -2346,5 +2347,154 @@ section {
   border-radius: 4px;
   margin-top: 30px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__btn {
+  display: inline-flex;
+  background-color: transparent;
+  border: none;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  cursor: pointer;
+  z-index: 99;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__btn {
+    display: none;
+  }
+}
+
+.mobile-menu__btn .mobile-menu__icon-close {
+  display: none;
+}
+
+.mobile-menu__btn.is-open .mobile-menu__icon-close {
+  display: block;
+}
+
+.mobile-menu__btn.is-open .mobile-menu__icon-menu {
+  display: none;
+}
+
+.mobile-menu__icon-close,
+.mobile-menu__icon-menu {
+  fill: var(--main-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__icon-close:focus,
+.mobile-menu__icon-close:hover,
+.mobile-menu__icon-menu:focus,
+.mobile-menu__icon-menu:hover {
+  fill: var(--focus-color);
+}
+
+.mobile-menu__set {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--main-bcg-color);
+  padding: 48px 40px;
+  z-index: 98;
+  display: none;
+}
+
+.mobile-menu__set.is-open {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__set.is-open {
+    display: none;
+  }
+}
+
+.mobile-menu__link-contacts {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+  text-decoration: none;
+  transform: font-size 250ms cubic-bezier(0.4, 0, 0.2, 1), line-height 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__link-contacts:hover, .mobile-menu__link-contacts:focus {
+  font-size: 34px;
+  line-height: 1.17;
+  color: var(--focus-color);
+}
+
+.mobile-menu__item-contacts:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--focus-color);
+}
+
+.mobile-menu__current {
+  color: var(--focus-color);
+}
+
+.mobile-menu__social-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 64px;
+}
+
+.mobile-menu__social-item {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+
+.mobile-menu__social-item:first-child {
+  padding-left: 0;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-menu__social-item {
+    margin-bottom: 0;
+  }
+}
+
+.mobile-menu__social-link {
+  position: relative;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--focus-color);
+}
+
+.mobile-menu__social-link::after {
+  content: "";
+  position: absolute;
+  right: -15%;
+  top: 0;
+  width: 1px;
+  height: 22px;
+  display: block;
+  background-color: var(--main-bcg-color);
 }
 /*# sourceMappingURL=main.css.map */
