--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -58,7 +58,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .clients-list {
         display: flex;
         flex-wrap: wrap;
