--- a/sass/layout/_work-gallery.scss
+++ b/sass/layout/_work-gallery.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .main-set {
         display: flex;
         flex-wrap: wrap;
@@ -178,7 +178,7 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .main-set {
         display: flex;
         flex-wrap: nowrap;
@@ -355,7 +355,7 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width:1200px) {
     .main-set {
         display: flex;
         justify-content: center;
@@ -412,7 +412,7 @@
     .works-set {
         display: flex;
         flex-wrap: wrap;
-       
+        /*align-items: center;*/
         align-items: flex-start;
         align-content: center;
         margin-top: -30px;
