--- a/css/main.css
+++ b/css/main.css
@@ -334,15 +334,21 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
+  .header.section {
+    padding-bottom: 0px;
+    padding-top: 0px;
+  }
   .header {
     border-bottom: 1px solid #ECECEC;
     padding-bottom: 0px;
+    padding-top: 0px;
   }
   .header .container {
     align-items: center;
+    height: 80px;
   }
   .logo-light-theme {
-    top: 24px;
+    /*top: 24px;*/
     color: var(--main-text-color);
     margin-right: 93px;
   }
@@ -573,6 +579,7 @@ section {
     align-items: center;
     margin-top: -30px;
     margin-left: -30px;
+    padding-top: 50px;
   }
   .about-link:not(:last-child) {
     margin-right: 30px;
@@ -765,9 +772,11 @@ section {
     display: flex;
     align-items: center;
     margin-left: -30px;
+    margin-bottom: 0px;
   }
   .team-container__set {
     margin-left: 30px;
+    margin-bottom: 0px;
     flex-basis: calc((100% - 120px)/4);
   }
   .our-team-bg {
@@ -1043,6 +1052,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .clients-box:hover, .clients-box:focus {
@@ -1695,7 +1705,7 @@ section {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
-  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 @media screen and (max-width: 767px) {
@@ -2011,6 +2021,7 @@ section {
     padding-top: 60px;
     padding-bottom: 60px;
     background: var(--footer-bg-color);
+    text-align: left;
   }
   .main-footer {
     display: flex;
