--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -6,5 +6,5 @@
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
