--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -12,6 +12,7 @@
         align-items: center;
         margin-top: -30px;
         margin-left: -30px;
+        padding-top: 50px;
     }
     .about-link {
         &:not(:last-child) {
