--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -155,6 +155,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 0px;
         
         transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
         &:hover,
