--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -175,5 +175,10 @@
         &:focus {
             fill: var(--focus-color);
         }
+
+    .clients-logo__other {
+        width: 84.44px;
+        height: 40.62px;
+    }
     }
 }
