--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -276,6 +276,7 @@
     .navigation {
         display: flex;
         align-items: center;
+        margin-left: 0px;
     }
     .list {
         /*display: flex;*/
