--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,7 @@ section {
   .navigation {
     display: flex;
     align-items: center;
+    margin-left: 0px;
   }
   .list {
     /*display: flex;*/
@@ -1067,6 +1068,10 @@ section {
   .clients-logo:hover, .clients-logo:focus {
     fill: var(--focus-color);
   }
+  .clients-logo .clients-logo__other {
+    width: 84.44px;
+    height: 40.62px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1402,6 +1407,7 @@ section {
   }
   .main-set__items {
     margin-right: 8px;
+    margin-bottom: 0px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .main-set__items:hover, .main-set__items:focus {
