--- a/sass/layout/_work-gallery.scss
+++ b/sass/layout/_work-gallery.scss
@@ -365,6 +365,7 @@
     }
     .main-set__items {
         margin-right: 8px;
+        margin-bottom: 0px;
         
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
